css/default.css
/* ... */
#colocTabs {
    border-bottom-width: 1px;
    border-bottom-style: solid;
    overflow: hidden;
}

#colocTab {
    float: left;
    width: 150px;
    font-size: 0.7em;
    border: #fff 1px solid;
    padding: 10px;
    margin-right: 1em;
    margin-bottom: 0.6em;
}

#colocTab.normal {
    color: #4988DE;
    background-color: #fff;  
    border-color: #888;
}

#colocTab.normal:hover {
    background-color: #ffa;
}

#colocTab.selected {
    color: black;
    background-color: #aaa;
    border-color: #555;
}

#colocResults { 
  width: 1200px;
}

#colocRun { 
  float: left;
  width: 1200px;
}

#colocHist {
  float: left;
  padding-right: 18px;
  text-align: center;
}

#ColocCoefficientSelectionDiv table { 
  font-size: 100%;
}

#ColocCoefficientSelectionDiv td.text {
  text-align: right;
}

#ColocCoefficientSelectionDiv td.check {
  text-align: left;
}

#colocCoefficients table { 
  font-size: 100%;
  width: 800px;
  float: left;
} 

#colocCoefficients td {
  text-align: center;
}

#colocCoefficients td.title {
  text-align: center;
  font-weight: bold;
  background-color: #BFFFB3;
}

#colocCoefficients td.header {
  width: 80px;
  font-weight: bold;
  background-color: #CFD7F2;
}

#colocCoefficients td.coefficient {
  background-color: #DAFFDA;
}

#colocCoefficients td.thresh {
  background-color: #EEFFEE;
}

#colocCoefficients td.cell {
  background-color: #DAFFDA;
}

#colocCoefficients td.marked {
  background-color: #B6ECFF;
}

#colocMap table { 
  font-size: 100%;
  width: 800px;
  float: left;
} 

#colocMap td {
  text-align: center;
}

#colocMap td.title {
  text-align: center;
  font-weight: bold;
  background-color: #CFD7F2;
}

#colocMap td.cell {
  padding-right: 1em;
}

#warning table { 
  font-size: 105%;
  padding-bottom: 1em;
  width: 610px;
  border: none;
  left:0px;
} 

#warning td {
  text-align: left;
  border: thin solid;
}

#warning td.text {
  color: #E80010;
  padding-left: 6px;
}

#scaling table { 
  font-size: 105%;
  padding-bottom: 1em;
  width: 610px;
  border: none;
  left:0px;
} 

#scaling td {
  text-align: left;
  border: thin solid;
}

#scaling td.text {
  color: #3366FF;
  padding-left: 6px;
}

#listusers {
  text-align: center;
  padding-bottom: 1em;
}

#listusers table {
    font-size: 70%;
}

#listusers tr.upline {
    border-right: thin solid;
    border-top: thin solid;
    border-left: thin solid;
}

#listusers tr.bottomline {
    margin-bottom: 1em;
    border-right: thin solid;
    border-left: thin solid;
    border-bottom: thin solid;
}

#listusers p {
    text-align: center;
}

#listusers td {
    padding: 3px;
}

#listusers td.menu {
    padding: 0px;
}

#listusers td.hr {
    padding: 0px;
}

#listusers td.notice {
    font-size: medium;
}

#homepage {
    width: 770px;
    text-align: left;
    margin: 15px;
    line-height: 1.5;
}

#homepage h3 {
    background-color: #eee;
    margin-top: 15px;
    font-size: 24px;
    font-weight: bold;
    text-align: center;
    line-height: 1.0;
}

#homepage table {
    border: 0px;
    font-size: 14px;
}

#homepage table tr {
    height: 120px;
    vertical-align: bottom;
}

#homepage table tr.separator {
  height: 1px;
  width: 200px;
  border-width: 1px 0px 0px 0px;
  border-style: solid;
  border-color: #CCCCCC;
}

#homepage table td {
    padding: 3px;
}

#homepage table td.icon {
    width: 120px;
}

#homepage table td img {
    width: 96px;
    height: 96px;
}

#homepage table td.text {
    vertical-align: top;
    text-align: left;
    width: 253px;
}

#homepage .cell {
    position:relative;
    top: 25px;
}

#homepage table a:link {
    font-size: 20px;
    font-weight: bold;
    color: #000;
}

#homepage table a:visited {
    font-size: 20px;
    font-weight: bold;
    color: #000;
}

#homepage .added_jobs {
    color: #4988de;
    font-weight: normal;
    font-size: 14px;
}

#homepage .added_jobs a:link {
    color: #4988de;
    font-weight: normal;
    font-decoration: none;
    font-size: 14px;
}

#homepage .added_jobs a:visited {
    color: #4988de;
    font-weight: normal;
    font-decoration: none;
    font-size: 14px;
}

#cmle-snr {
    text-align: left;
}

#qmle-snr {
    text-align: left;
}

td {
    text-align: center;
}

td.name {
    text-align: left;
}

td.group {
    text-align: center;
}

td.email {
    width: 50%;
    text-align: right;
}

td.date {
    text-align: left;
}

td.operations {
    text-align: right;
}

td.operations input {
    font-size: 70%;
}

tr.disabled {
    background: silver;
}

a.selected {
    color: black;
    text-decoration: none;
    border: solid 1px;
}

a.empty {
    color: rgb(194, 26, 26);
    text-decoration: none;
    border: solid 1px white;
    font-size: 9px;
}

a.filled {
    color: blue;
    text-decoration: none;
    border: solid 1px white;
    font-size: 9px;
}

#box #adduser {
    padding-right: 5em;
}

#adduser {
    text-align: right;
    padding-right: 3em;
}

#adduser textarea {
    width: 50%;
}

#addanotherfile {
    margin: 5px;
    color: #f23;
    font-size: 80%;
}

span.spacer {
    display: block;
    clear: both;
}

fieldset {
    margin: 5px;
    margin-top: 15px;
    padding: 10px 5px 10px 10px;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    border-radius: 7px;
}

fieldset legend {
    font-size: 1.0em;
    font-weight: bold;
    text-align: left;
}

fieldset.report {
  margin-top:10px;
  margin-bottom:10px;
  padding-right:15px;
}

fieldset.p {

}

fieldset .values {
    position: relative;
    padding-left: 20px;
    width: 100%;
}

fieldset .reset
{
    background: url(../images/reset.png) no-repeat left center;
    position: absolute;
    top: 0px;
    left: 0px;
    bottom: 0px;
    width: 20px;
}

fieldset .bottom {
    clear: both;
    width: 100%;
}

ol li {
    display: inline;
}

input {
    text-align: center;
}

input.icon {
    width: 60px;
    height: 60px;
    color: #fff;
    font-size: 0px;
    text-align: left;
    cursor: pointer;
    border: none;
}
/* ... */

